--- a/debian/rules
+++ b/debian/rules
@@ -30,8 +30,7 @@ ifeq (,$(filter i386 amd64,$(DEB_HOST_ARCH)))
   DISTRO_SPECIFIC_OPTIONS = --enable-external-libraries
 endif
 else
-  DISTRO_SPECIFIC_OPTIONS = --enable-external-libraries \
-    --disable-dvdcss \
+  DISTRO_SPECIFIC_OPTIONS = --disable-dvdcss \
     --disable-non-free
 endif
 
@@ -41,7 +40,14 @@ GL_CONFIG_OPTIONS = --enable-gl --disable-gles
 OPENMAX_OPTIONS = --disable-openmax
 else
 GL_CONFIG_OPTIONS = --disable-gl --enable-gles
-OPENMAX_OPTIONS = --enable-openmax
+OPENMAX_OPTIONS = --disable-openmax
+VDPAU_OPTIONS = --disable-vdpau
+VAAPI_OPTIONS = --disable-vaapi
+NEON_OPTIONS = --enable-neon
+endif
+
+ifeq (--enable-vdpau, $(VDPAU_OPTIONS))
+  LIB_VDPAU = -lvdpau
 endif
 
 # Various environment variables to set
@@ -55,7 +61,10 @@ XBMC_CONFIG_OPTIONS ?= --host=$(DEB_HOST_GNU_TYPE) \
   --prefix=/usr --docdir=/usr/share/doc/xbmc \
   $(DEBUG_OPTIONS) \
   $(GL_CONFIG_OPTIONS) \
-  --enable-vdpau \
+  $(VDPAU_OPTIONS) \
+  $(VAAPI_OPTIONS) \
+  $(NEON_OPTIONS) \
+  --enable-gstreamer \
   --enable-crystalhd \
   --disable-vdadecoder \
   --disable-vtbdecoder \
@@ -77,6 +86,7 @@ XBMC_CONFIG_OPTIONS ?= --host=$(DEB_HOST_GNU_TYPE) \
   --enable-texturepacker \
   --enable-nfs \
   --enable-libcec \
+  --enable-afpclient \
   --enable-airtunes \
   $(DISTRO_SPECIFIC_OPTIONS) \
   $(XBMC_CONFIG_EXTRA_OPTIONS) \
@@ -111,6 +121,7 @@ override_dh_clean:
 	debian/rules $(INPUT_FILES)
 
 override_dh_auto_configure: configure
+	./bootstrap
 	./configure $(XBMC_CONFIG_OPTIONS)
 
 override_dh_auto_install:
@@ -144,10 +155,11 @@ debian/tmp/xbmc-bin-dummy.so:
 	mkdir -p debian/tmp
 	cc -xc -shared -Wl,--no-as-needed -o $@ /dev/null \
 		-lcurl-gnutls \
-		-lvdpau \
+		$(LIB_VDPAU) \
 		-lrtmp \
 		-lnfs \
 		-lshairport \
 		-lplist \
+		-lafpclient \
 		-lass \
 		-lcec
